--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <figure id="logo" class="col-md-4 col-sm-3" data-hook>
-          <%= logo %>
+          <%= image_tag("logo/spree_50-0ae687ccd486b63b01687b1df9e5394430f6fce3ab40c28250b179be4363ddc1.png") %>
         </figure>
         <%= render partial: 'spree/shared/nav_bar' %>
       </div>
