--- a/app/views/spree/shared/_nav_bar.html.erb
+++ b/app/views/spree/shared/_nav_bar.html.erb
@@ -1,5 +1,8 @@
 <nav class="navbar col-md-8 col-sm-9" id="top-nav-bar">
   <ul id="nav-bar" class="nav navbar-nav navbar-right" data-hook>
+  	<li id="link-to-login"> <%= link_to Spree.t(:Game1), main_app.spree_content_Game1_path %></li>
+  	<li id="link-to-login"> <%= link_to Spree.t(:Game1), main_app.spree_content_Game2_path %></li>
+  	<li id="link-to-login"> <%= link_to Spree.t(:Game1), main_app.spree_content_Game3_path %></li>
     <li id="search-bar" data-hook>
       <%= render partial: 'spree/shared/search' %>
     </li>
