--- a/app/views/spree/content/test.html.erb
+++ b/app/views/spree/content/test.html.erb
@@ -1,1 +1,4 @@
-Nothing to see here. Move along now.
+<button type="button" class="btn btn-secondary btn-lg btn-block"><%= link_to 'Sign in', new_manager_session_path %></button>
+<button type="button" class="btn btn-secondary btn-lg btn-block">Waitstaff</button>
+<button type="button" class="btn btn-secondary btn-lg btn-block">Kitchen</button>
+<button type="button" class="btn btn-secondary btn-lg btn-block">Manager</button>
