--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -5,7 +5,7 @@
       <li><%= link_to "Game 1", '../spree/content/Game1' %></li>
       <li><%= link_to "Game 2", '../spree/content/Game2' %></li>
       <li><%= link_to "Drink Refill", '../products/request-drink-refill?taxon_id=16' %></li>
-      <li><%= link_to "Drink Refill", '../products/request-help?taxon_id=16' %></li>
+      <li><%= link_to "Request Help", '../products/request-help?taxon_id=16' %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" data-hook>
       <li id="link-to-cart" data-hook>
