I added a games section to the nav bar that fixes the URL issue where you cant to game 2 from game 1 AND I added game 3

--- a/app/views/spree/content/Game3.html.erb
+++ b/app/views/spree/content/Game3.html.erb
@@ -2,19 +2,18 @@
 <html>
 	<head>
 		<meta charset= "UTF-8">
-		<title>Winged Bullet</title>
+		<title>Sudoku</title>
 	</head>
 	<body align="center">
-		<h1>Winged Bullet</h1>
+		<h1></h1>
+		<p>Play the game below!</p>
 		<div align="center">
-		    <embed width="700" height="500" base="https://external.kongregate-games.com/gamez/0000/6057/live/" src="https://external.kongregate-games.com/gamez/0000/6057/live/embeddable_6057.swf" type="application/x-shockwa
-	ve-flash">
-    	</div>
+			<IFRAME SRC="//widget.websudoku.com/?level=2" WIDTH="200" HEIGHT="260" SCROLLING="no" FRAMEBORDER="0"></IFRAME>
+		</div>
         <!-- footer -->
             </br>
-            <h4>Note: this game doesnt work yet</h4>
-            <h6>Brought to you by mindgames.com</h6>
+            <h4>Note: If the game doesn't load, reload the page</h4>
+            <h6>Brought to you by Web Sudoku Widget</h6>
             </br>
-	</body>
+</body>
 </html>
-
