--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -2,8 +2,7 @@
   <div id="main-nav-bar" class="navbar">
     <ul class="nav navbar-nav" data-hook>
       <li id="home-link" data-hook><%= link_to Spree.t(:home), spree.root_path %></li>
-      <li><%= link_to "Game 1", '../spree/content/Game1' %></li>
-      <li><%= link_to "Game 2", '../spree/content/Game2' %></li>
+      <li><a href="/spree/content/games_home" class="btn btn-primary">Games</a></li> 
       <li><%= link_to "Drink Refill", '../products/request-drink-refill?taxon_id=16' %></li>
       <li><%= link_to "Request Help", '../products/request-help?taxon_id=16' %></li>
     </ul>
