--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -13,6 +13,6 @@ var settings = {
 }
 
 $.ajax(settings).done(function (response) {
-  console.log(response);
+  window.alert(response);
 });
 </script>
