testing new waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -13,6 +13,6 @@ var settings = {
 }
 
 $.ajax(settings).done(function (response) {
-  window.alert(response);
+  document.write(JSON.stringify(response));
 });
 </script>
