testing new waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -1,5 +1,6 @@
 <h1> Waitstaff </h1>
 
+<div>
 <script>
 var settings = {
   "async": true,
@@ -16,3 +17,4 @@ $.ajax(settings).done(function (response) {
   document.write(JSON.stringify(response));
 });
 </script>
+</div>
