commented out exisitng cards stuff

--- a/app/views/spree/checkout/_payment.html.erb
+++ b/app/views/spree/checkout/_payment.html.erb
@@ -3,12 +3,13 @@
     <h3 class="panel-title"><%= Spree.t(:payment_information) %></h3>
   </div>
   <div class="panel-body" data-hook="checkout_payment_step">
-    <% if @payment_sources.present? %>
+<!--    <% if @payment_sources.present? %>
       <div class="card_options">
         <%= radio_button_tag 'use_existing_card', 'yes', true %>
         <label for="use_existing_card_yes">
           <%= Spree.t(:use_existing_cc) %>
         </label>
+        
         <%= radio_button_tag 'use_existing_card', 'no' %>
         <label for="use_existing_card_no">
           <%= Spree.t(:use_new_cc_or_payment_method) %>
@@ -31,9 +32,11 @@
               <% end %>
             </tbody>
           </table>
-        </p>
+        </p> 
       </div>
+
     <% end %>
+-->
 
     <%= render partial: 'spree/checkout/payment/storecredit' %>
 
