--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,12 @@
 $light-orange: #ff8c00;
 $navbar-default-color: $light-orange;
 
+.container h1 {
+	color: 	#000000;
+	text-align: center;
+	padding: 5%;
+	font-size: 70px;
+	text-shadow: 0 1px 3px grey;
+}
+
 @import "bootstrap";
