edit waitstaff view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 $light-orange: #ff8c00;
 $navbar-default-color: $light-orange;
 
-.container h1 {
+.container{
 	color: 	#000000;
 	text-align: center;
 	padding: 5%;
