--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -1,20 +1,20 @@
 <h1> Waitstaff </h1>
 
 <div class="container">
-	<script>
-	var settings = {
-	  "async": true,
-	  "crossDomain": true,
-	  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com",
-	  "method": "GET",
-	  "headers": {
-	    "cache-control": "no-cache",
-	    "Postman-Token": "8b14475b-1276-4bb3-b0c8-7fdbe07c9563"
-	  }
-	}
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "8b14475b-1276-4bb3-b0c8-7fdbe07c9563"
+		  }
+		}
 
-	$.ajax(settings).done(function (response) {
-	  document.write(JSON.stringify(response));
-	});
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response, null, 2));
+		});
 	</script>
 </div>
