edit waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -14,7 +14,7 @@
 		}
 
 		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response,undefined, '\t'));
+		  document.write(JSON.stringify(response,null, '\t'));
 		});
 	</script>
 </div>
