edit waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -15,6 +15,9 @@
 
 		$.ajax(settings).done(function (response) {
 		  document.write(JSON.stringify(response,null, '\t'));
+		  if (response.hasOwnProperty("id")){
+    		document.write(response.id);             //007
+			}
 		});
 	</script>
 </div>
