testing new waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -16,8 +16,8 @@
 		$.ajax(settings).done(function (response) {
 		  document.write(JSON.stringify(response,null, '\t'));
 
-			if (response.hasOwnProperty("id")){
-				    console.log(response.id);      //007
+			if (response.hasOwnProperty("orders")){
+				    console.log(response.orders;      //007
 				}
 
 		});
