--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -5,19 +5,22 @@
 		var settings = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com",
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com&q[s]=number%20desc=,number%20desc",
 		  "method": "GET",
 		  "headers": {
 		    "cache-control": "no-cache",
-		    "Postman-Token": "8b14475b-1276-4bb3-b0c8-7fdbe07c9563"
-		  }
-		}
+		    "Postman-Token": "b0ebadb7-179b-4d76-8db7-04b8c5ac4447"
+		  		}
+			}
 
 		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response,null, '\t'));
+		  if(response){
+		  	$("#response").html(response[0].value);
+		  }
+		});
 
 			if (response.hasOwnProperty("orders")){
-				    console.log(response.orders;      //007
+				    console.log(response.orders);      //007
 				}
 
 		});
