edit waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -5,16 +5,35 @@
 		var settings = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com&q[s]=number%20desc=,number%20desc",
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table1@tabl1.com&q[s]=number%20desc=,number%20desc",
 		  "method": "GET",
 		  "headers": {
 		    "cache-control": "no-cache",
-		    "Postman-Token": "b0ebadb7-179b-4d76-8db7-04b8c5ac4447"
-		  		}
-			}
+		    "Postman-Token": "9c2b1de4-6292-403c-9e03-7b5d39c2b6e3"
+		  }
+		}
 
 		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response, null, 2));
+		  document.write(response);
 		});
 	</script>
+
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table2@table2.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(response);
+		});
+	</script>
+
+
 </div>
