--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -5,7 +5,7 @@
 		var settings = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[s]=number%20desc=,number%20desc",
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table1@tabl1.com&q[s]=number%20desc=,number%20desc",
 		  "method": "GET",
 		  "headers": {
 		    "cache-control": "no-cache",
@@ -14,7 +14,24 @@
 		}
 
 		$.ajax(settings).done(function (response) {
-		  document.write(response);
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table2@table2.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
 		});
 	</script>
 
