edit waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -17,7 +17,7 @@
 		  document.write(JSON.stringify(response));
 		});
 	</script>
-
+<br>
 	<script type="text/javascript">
 		var settings = {
 		  "async": true,
@@ -34,6 +34,107 @@
 		  document.write(JSON.stringify(response));
 		});
 	</script>
+<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table3@table3.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
 
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table4@table4.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table5@table5.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table6@table6.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table7@table7.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table8@table8.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
 
 </div>
