edit waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -19,7 +19,7 @@
 	</script>
 <br>
 	<script type="text/javascript">
-		var settings = {
+		var settings2 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table2@table2.com&q[s]=number%20desc=,number%20desc",
@@ -30,13 +30,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings2).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 <br>
 	<script type="text/javascript">
-		var settings = {
+		var settings3 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table3@table3.com&q[s]=number%20desc=,number%20desc",
@@ -47,13 +47,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings3).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 	<br>
 	<script type="text/javascript">
-		var settings = {
+		var settings4 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table4@table4.com&q[s]=number%20desc=,number%20desc",
@@ -64,13 +64,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings4).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 	<br>
 	<script type="text/javascript">
-		var settings = {
+		var settings5 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table5@table5.com&q[s]=number%20desc=,number%20desc",
@@ -81,13 +81,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings5).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 	<br>
 	<script type="text/javascript">
-		var settings = {
+		var settings6 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table6@table6.com&q[s]=number%20desc=,number%20desc",
@@ -98,13 +98,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings6).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 	<br>
 	<script type="text/javascript">
-		var settings = {
+		var settings7 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table7@table7.com&q[s]=number%20desc=,number%20desc",
@@ -115,13 +115,13 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings7).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
 	<br>
 	<script type="text/javascript">
-		var settings = {
+		var settings8 = {
 		  "async": true,
 		  "crossDomain": true,
 		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table8@table8.com&q[s]=number%20desc=,number%20desc",
@@ -132,7 +132,7 @@
 		  }
 		}
 
-		$.ajax(settings).done(function (response) {
+		$.ajax(settings8).done(function (response) {
 		  document.write(JSON.stringify(response));
 		});
 	</script>
