edit waitstaff view

--- a/app/views/spree/content/waitstaff3.html.erb
+++ b/app/views/spree/content/waitstaff3.html.erb
@@ -5,16 +5,135 @@
 		var settings = {
 		  "async": true,
 		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com&q[s]=number%20desc=,number%20desc",
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table17@table17.com&q[s]=number%20desc=,number%20desc",
 		  "method": "GET",
 		  "headers": {
 		    "cache-control": "no-cache",
-		    "Postman-Token": "b0ebadb7-179b-4d76-8db7-04b8c5ac4447"
-		  		}
-			}
+		    "Postman-Token": "9c2b1de4-6292-403c-9e03-7b5d39c2b6e3"
+		  }
+		}
 
 		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response, null, 2));
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+<br>
+	<script type="text/javascript">
+		var settings2 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table18@table18.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings2).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+<br>
+	<script type="text/javascript">
+		var settings3 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table19@table19.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings3).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings4 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table20@table20.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings4).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings5 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table21@table21.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings5).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings6 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table22@table22.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings6).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings7 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table23@table23.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings7).done(function (response) {
+		  document.write(JSON.stringify(response));
+		});
+	</script>
+	<br>
+	<script type="text/javascript">
+		var settings8 = {
+		  "async": true,
+		  "crossDomain": true,
+		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table24@table24.com&q[s]=number%20desc=,number%20desc",
+		  "method": "GET",
+		  "headers": {
+		    "cache-control": "no-cache",
+		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
+		  }
+		}
+
+		$.ajax(settings8).done(function (response) {
+		  document.write(JSON.stringify(response));
 		});
 	</script>
 </div>
