--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -1,5 +1,5 @@
 <h1> Waitstaff </h1>
 
 <form>
-<input type="button" value="Put Your Text Here" onclick="window.location.href='http://www.hyperlinkcode.com/button-links.php'" />
+<input type="button" value="Table 1" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/2/orders'" />
 </form>
