updated waitstaff view

--- a/app/views/spree/content/waitstaff.html.erb
+++ b/app/views/spree/content/waitstaff.html.erb
@@ -3,3 +3,31 @@
 <form>
 <input type="button" value="Table 1" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/2/orders'" />
 </form>
+
+<form>
+<input type="button" value="Table 2" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/4/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 3" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/5/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 4" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/6/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 5" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/7/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 6" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/8/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 7" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/9/orders'" />
+</form>
+
+<form>
+<input type="button" value="Table 8" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/10/orders'" />
+</form>
