--- a/app/views/spree/content/waitstaff2.html.erb
+++ b/app/views/spree/content/waitstaff2.html.erb
@@ -1,139 +1,35 @@
 <h1> Waitstaff </h1>
 
-<div class="container">
-	<script type="text/javascript">
-		var settings = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table9@table9.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "9c2b1de4-6292-403c-9e03-7b5d39c2b6e3"
-		  }
-		}
+<h1> Waitstaff </h1>
 
-		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-<br>
-	<script type="text/javascript">
-		var settings2 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table10@table10.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 9" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/11/orders'" />
+</form>
 
-		$.ajax(settings2).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-<br>
-	<script type="text/javascript">
-		var settings3 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table11@table11.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 10" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/12/orderss'" />
+</form>
 
-		$.ajax(settings3).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings4 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table12@table12.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 11" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/32/orders'" />
+</form>
 
-		$.ajax(settings4).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings5 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table13@table13.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 12" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/13/orders'" />
+</form>
 
-		$.ajax(settings5).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings6 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table14@table14.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 13" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/14/orders'" />
+</form>
 
-		$.ajax(settings6).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings7 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table15@table15.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 14" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/15/orders'" />
+</form>
 
-		$.ajax(settings7).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings8 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table16@table16.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 15" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/16/orders'" />
+</form>
 
-		$.ajax(settings8).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-</div>
+<form>
+<input type="button" value="Table 16" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/17/orders'" />
+</form>
