--- a/app/views/spree/content/waitstaff3.html.erb
+++ b/app/views/spree/content/waitstaff3.html.erb
@@ -1,139 +1,35 @@
 <h1> Waitstaff </h1>
 
-<div class="container">
-	<script type="text/javascript">
-		var settings = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table17@table17.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "9c2b1de4-6292-403c-9e03-7b5d39c2b6e3"
-		  }
-		}
+<h1> Waitstaff </h1>
 
-		$.ajax(settings).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-<br>
-	<script type="text/javascript">
-		var settings2 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table18@table18.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 17" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/30/edit'" />
+</form>
 
-		$.ajax(settings2).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-<br>
-	<script type="text/javascript">
-		var settings3 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table19@table19.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 18" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/29/orders'" />
+</form>
 
-		$.ajax(settings3).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings4 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table20@table20.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 19" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/28/orders'" />
+</form>
 
-		$.ajax(settings4).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings5 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table21@table21.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 20" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/27/orders'" />
+</form>
 
-		$.ajax(settings5).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings6 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table22@table22.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 21" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/26/orders'" />
+</form>
 
-		$.ajax(settings6).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings7 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table23@table23.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 22" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/25/orders'" />
+</form>
 
-		$.ajax(settings7).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-	<br>
-	<script type="text/javascript">
-		var settings8 = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://suit-and-thai.herokuapp.com/api/v1/orders?token=708c6f286f0bafc16869e3eb668011c52558ba60c34e0055&q[email_cont]=table24@table24.com&q[s]=number%20desc=,number%20desc",
-		  "method": "GET",
-		  "headers": {
-		    "cache-control": "no-cache",
-		    "Postman-Token": "81b7321a-e5de-4f12-9b09-7990ffb80d80"
-		  }
-		}
+<form>
+<input type="button" value="Table 23" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/24/orders'" />
+</form>
 
-		$.ajax(settings8).done(function (response) {
-		  document.write(JSON.stringify(response));
-		});
-	</script>
-</div>
+<form>
+<input type="button" value="Table 24" onclick="window.location.href='https://suit-and-thai.herokuapp.com/admin/users/23/orders'" />
+</form>
