added waitstaff button

--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -5,6 +5,7 @@
       <li><a href="/spree/content/games_home" class="btn btn-primary">Games</a></li> 
       <li><%= link_to "Drink Refill", '../products/request-drink-refill?taxon_id=16' %></li>
       <li><%= link_to "Request Help", '../products/request-help?taxon_id=16' %></li>
+      <li><a href="/spree/content/waitstaff_home" class="btn btn-primary">Waitstaff Home</a></li> 
 
 
     </ul>
