--- a/app/views/spree/orders/show.html.erb
+++ b/app/views/spree/orders/show.html.erb
@@ -11,7 +11,8 @@
 
     <p data-hook="links">
 <!--      <%= link_to Spree.t(:back_to_store), spree.root_path, class: "button" %>-->
-      <button><a href="outcome">Click for a chance to win a FREE appetizer or dessert coupon for your next visit!</a></button>
+      <!-- <button><a href="../spree/orders/outcome">Click for a chance to win a FREE appetizer or dessert coupon for your next visit!</a></button>-->
+      <%= link_to "Click for a chance to win a FREE appetizer or dessert coupon for your next visit!", 'https://suit-and-thai.herokuapp.com/spree/orders/outcome' %>
       <% unless order_just_completed?(@order) %>
         <% if try_spree_current_user && respond_to?(:account_path) %>
           <%= link_to Spree.t(:my_account), account_path, class: "button" %>
